# AsmInVs

./: .gitignore  AsmInVs.sln  CMakeLists.txt  README.md  bld.bat  bld.cmake
x64asm/: CMakeLists.txt  asm64code.asm  stdafx.cpp  stdafx.h  x64asm.cpp  x64asm.sln  x64asm.vcxproj  x64asm.vcxproj.filters
x64asm_stdalone/: CMakeLists.txt  stdalone_x64.asm
x86asm/: CMakeLists.txt  stdafx.h  x86asm.cpp  x86asm.filters  x86asm.vcxproj
